Bug 311053 XUL frames should respect preventDefault() [e.g. when menus are open] r=Enn sr=jst